--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,32 +1,26 @@
+name: Test Environment Setup
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+
 jobs:
-  build:
+  setup-test-environment:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v3
 
     - name: Set up Node.js
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v3
       with:
-        node-version: '14'
+        node-version: '16'
 
     - name: Install dependencies
       run: npm install
 
-    - name: Run tests
-      run: npm test
-
-    - name: Fetch Lotto Number and Save to File
-      run: |
-        curl -s 'https://www.dhlottery.co.kr/common.do?method=getLottoNumber&drwNo=861' -o response.json
-        drwNoDate=$(jq -r '.drwNoDate' response.json)
-        mv response.json "${drwNoDate}.json"
-
-    - name: Commit and Push File
-      run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git add *.json
-        git commit -m "Add lotto number response file"
-        git push
+    - name: Run TypeScript tests
+      run: npx jest --config jest.config.js
