--- a/package.json
+++ b/package.json
@@ -1,3 +1,10 @@
-"scripts": {
-  "test": "jest"
+{
+  "scripts": {
+    "test": "jest"
+  },
+  "devDependencies": {
+    "jest": "^29.0.0",
+    "ts-jest": "^29.0.0",
+    "@types/jest": "^29.0.0"
+  }
 }
