--- a/package.json
+++ b/package.json
@@ -1,10 +1,21 @@
 {
+  "name": "lotto-fetcher",
+  "version": "1.0.0",
+  "description": "A project to fetch and save lotto numbers using TypeScript",
+  "main": "dist/fetchAndSave.js",
   "scripts": {
+    "build": "tsc",
+    "start": "node dist/fetchAndSave.js",
     "test": "jest"
   },
+  "dependencies": {
+    "axios": "^0.21.1"
+  },
   "devDependencies": {
+    "typescript": "^4.4.3",
     "jest": "^29.0.0",
     "ts-jest": "^29.0.0",
-    "@types/jest": "^29.0.0"
+    "@types/jest": "^29.0.0",
+    "@types/node": "^16.0.0"
   }
 }
